--- a/HW2.01/Base.lproj/Main.storyboard
+++ b/HW2.01/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_0" orientation="portrait" appearance="light"/>
+    <device id="retina6_72" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,15 +13,15 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="HW2_01" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ozq-pL-vNU">
-                                <rect key="frame" x="16" y="63" width="358" height="350"/>
+                                <rect key="frame" x="16" y="75" width="398" height="388"/>
                                 <color key="backgroundColor" systemColor="systemYellowColor"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fcB-4m-erv">
-                                <rect key="frame" x="16" y="460" width="358" height="350"/>
+                                <rect key="frame" x="16" y="510" width="398" height="388"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
@@ -32,6 +32,7 @@
                             <constraint firstItem="ozq-pL-vNU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="CXd-Wx-uYP"/>
                             <constraint firstItem="fcB-4m-erv" firstAttribute="leading" secondItem="ozq-pL-vNU" secondAttribute="leading" id="Eng-Hy-Yiw"/>
                             <constraint firstItem="fcB-4m-erv" firstAttribute="height" secondItem="ozq-pL-vNU" secondAttribute="height" id="IYk-Wd-902"/>
+                            <constraint firstItem="fcB-4m-erv" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="KGg-XY-r1f"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ozq-pL-vNU" secondAttribute="trailing" constant="16" id="M9y-I0-Lgj"/>
                             <constraint firstItem="fcB-4m-erv" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="WKa-2U-Lxw"/>
                             <constraint firstItem="fcB-4m-erv" firstAttribute="top" secondItem="ozq-pL-vNU" secondAttribute="bottom" constant="47" id="ZUK-6o-dIG"/>
